enhanced mobile experience

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,10 @@
 # Backend API Configuration
-VITE_API_URL=https://your-backend-domain.onrender.com/api
-VITE_SOCKET_URL=https://your-backend-domain.onrender.com
+VITE_API_URL=https://jshs-logistics.onrender.com/api
+VITE_SOCKET_URL=https://jshs-logistics.onrender.com
 
 # Domain configuration for multitenancy
-VITE_BASE_DOMAIN=yourdomain.com
+VITE_BASE_DOMAIN=jshsl.app
+
+# Vapi Configuration
+VITE_VAPI_PUBLIC_API_KEY=787770fa-24b3-4324-a22c-9a2ae1489d92
+VITE_VAPI_ASSISTANT_ID=8d1ba49a-42c5-4774-81b0-59b1d492203b
