--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,82 @@
-# Logs
-logs
-*.log
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+# Logs
+logs/
+*.log
+
+# Build artifacts
+dist/
+build/
+.next/
+.nuxt/
+.vite/
+out/
 dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Dependency directories
+vendor/
 
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.staging.local
+.env.*.local
 .env.production
 /frontend/.env
 /backend/.env
 frontend/.env.production
 backend/.env.production
 
+# Editor directories and files
+.vscode/
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.bak
+*.swo
+*.swp
+*~
+.history/
+
+# OS generated files
+.DS_Store
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# IDE specific
+*.iml
+.project
+.classpath
+.settings/
+
+# Other
+*.zip
+*.rar
+*.7z
+*.tar.gz
+*.tgz
+*.gz
+*.patch
+*.diff
+
+# Project specific
 .agent
+*.local
